--- a/frontend/src/components/hero/Hero.css
+++ b/frontend/src/components/hero/Hero.css
@@ -1,3 +1,11 @@
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden; 
+    background-color: black; 
+}
 .movie-carousel-container{
     width: 100vw;
     background-color: black;
